# modern-cpp-opengl-examples

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: fmt.cmake  glfw.cmake  glm.cmake
include/: application.hpp  cube.hpp  example.hpp  glmath.hpp  graphics.hpp  journal.hpp  quad.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/example01/: CMakeLists.txt  example01.cpp
src/example02/: CMakeLists.txt  example02.cpp
src/example03/: CMakeLists.txt  example03.cpp
src/example04/: CMakeLists.txt  example04.cpp
